--- a/src/pages/landing.css
+++ b/src/pages/landing.css
@@ -31,16 +31,13 @@ div.welcome-screen {
   object-fit: contain;
 }
 
-.cta {
-  padding: 0;
-}
 
 button.start-btn {
   display: inline;
 }
 
 h1 {
-  padding: 0 0 1em 0;
+  padding: 0.3em;
   margin: 0;
   line-height: 1em;
   font-size: 6em;
@@ -50,8 +47,8 @@ h1 {
 }
 
 
-h3 {
-  padding: 1.5em 0 1.5em 0;
+h3.cta {
+  padding: 2em 0 2em 0;
 }
 
 .start-btn {
@@ -80,7 +77,7 @@ button:focus-visible {
 
 img.skull {
   height: 10em;
-  align-items: baseline;
+  align-items: center;
 }
 @media (prefers-color-scheme: light) {
   :root {
