--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,31 @@
-@import "tailwindcss";
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
 
+  color-scheme: light dark;
+  color: rgba(73, 73, 73, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+.skull {
+  display: inline;
+  position: absolute;
+  bottom: 0;
+  right: 2em;
+  height: 12em;
+  padding: 1em;
+}
